; ModuleID = '/home/carl/AnghaBench/git/extr_ref-filter.c_align_atom_handler.c'
source_filename = "/home/carl/AnghaBench/git/extr_ref-filter.c_align_atom_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.atom_value = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.ref_formatting_state = type { %struct.ref_formatting_stack* }
%struct.ref_formatting_stack = type { i32*, i32 }
%struct.strbuf = type { i32 }

@end_align_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.atom_value*, %struct.ref_formatting_state*, %struct.strbuf*)* @align_atom_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @align_atom_handler(%struct.atom_value* %0, %struct.ref_formatting_state* %1, %struct.strbuf* %2) #0 {
  %4 = alloca %struct.atom_value*, align 8
  %5 = alloca %struct.ref_formatting_state*, align 8
  %6 = alloca %struct.strbuf*, align 8
  %7 = alloca %struct.ref_formatting_stack*, align 8
  store %struct.atom_value* %0, %struct.atom_value** %4, align 8
  store %struct.ref_formatting_state* %1, %struct.ref_formatting_state** %5, align 8
  store %struct.strbuf* %2, %struct.strbuf** %6, align 8
  %8 = load %struct.ref_formatting_state*, %struct.ref_formatting_state** %5, align 8
  %9 = getelementptr inbounds %struct.ref_formatting_state, %struct.ref_formatting_state* %8, i32 0, i32 0
  %10 = call i32 @push_stack_element(%struct.ref_formatting_stack** %9)
  %11 = load %struct.ref_formatting_state*, %struct.ref_formatting_state** %5, align 8
  %12 = getelementptr inbounds %struct.ref_formatting_state, %struct.ref_formatting_state* %11, i32 0, i32 0
  %13 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %12, align 8
  store %struct.ref_formatting_stack* %13, %struct.ref_formatting_stack** %7, align 8
  %14 = load i32, i32* @end_align_handler, align 4
  %15 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %7, align 8
  %16 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 8
  %17 = load %struct.atom_value*, %struct.atom_value** %4, align 8
  %18 = getelementptr inbounds %struct.atom_value, %struct.atom_value* %17, i32 0, i32 0
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load %struct.ref_formatting_stack*, %struct.ref_formatting_stack** %7, align 8
  %23 = getelementptr inbounds %struct.ref_formatting_stack, %struct.ref_formatting_stack* %22, i32 0, i32 0
  store i32* %21, i32** %23, align 8
  ret i32 0
}

declare dso_local i32 @push_stack_element(%struct.ref_formatting_stack**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
